# ShutdownTimer

./: LICENSE  README.md  setup.cfg  shutdowntimer.ps1
shutdowntimer/: main.py
