[metadata]
name = shutdowntimer
version = 0.0.1
author = hayj
description = A UI tool to shutdown / snooze Microsoft Windows shutdown.
url = https://github.com/hayj/ShutdownTimer
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    systools
    tqdm
    tkinter

[options.entry_points]
console_scripts =
    shutdowntimer = shutdowntimer.main:main

